initial app layout

--- a/app/index.html
+++ b/app/index.html
@@ -25,15 +25,248 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="hero-unit">
-      <h1>'Allo, 'Allo!</h1>
-      <p>You now have</p>
-      <ul>
-        <li>HTML5 Boilerplate</li>
-        <li>Sass</li>
-        <li>Modernizr</li>
-      </ul>
+    <header class="white bg-gray bg-cover bg-center" style="background-image: url(https://d262ilb51hltx0.cloudfront.net/max/2000/1*DZwdGMaeu-rvTroJYui6Uw.jpeg)">
+      <nav class="clearfix white">
+        <div class="sm-col">
+          <a href="/" class="button py2 button-transparent">Home</a>
+          <a href="/" class="button py2 button-transparent">Burgers</a>
+          <a href="/" class="button py2 button-transparent">Fries</a>
+        </div>
+        <div class="sm-col-right">
+          <a href="/" class="button py2 button-transparent">About</a>
+        </div>
+      </nav>
+      <div class="center px2 py4">
+        <h1 class="h1 h0-responsive caps mt4 mb0 regular">Hamburgers</h1>
+        <p class="h3">Artisinal ground chuck creations</p>
+        <a href="#" class="h3 button button-big mb4">Pancake</a>
+      </div>
+    </header>
+
+
+    <section class="container px2 py3">
+      <div class="clearfix mxn2">
+        <div class="sm-col sm-col-4 px2">
+          <h2 class="h1 mb0">Bacon</h2>
+          <p>Bacon ipsum dolor sit amet chuck prosciutto landjaeger ham hock filet mignon shoulder hamburger pig venison. Ham bacon corned beef, sausage kielbasa flank tongue pig drumstick capicola swine short loin ham hock kevin.</p>
+        </div>
+        <div class="sm-col sm-col-4 px2">
+          <h2 class="h1 mb0">Bratwurst</h2>
+          <p>Bacon ipsum dolor sit amet chuck prosciutto landjaeger ham hock filet mignon shoulder hamburger pig venison. Ham bacon corned beef, sausage kielbasa flank tongue pig drumstick capicola swine short loin ham hock kevin.</p>
+        </div>
+        <div class="sm-col sm-col-4 px2">
+          <h2 class="h1 mb0">Andouille</h2>
+          <p>Bacon ipsum dolor sit amet chuck prosciutto landjaeger ham hock filet mignon shoulder hamburger pig venison. Ham bacon corned beef, sausage kielbasa flank tongue pig drumstick capicola swine short loin ham hock kevin.</p>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="container px2 py3">
+      <h1 class="mt0">
+        <a href="#" class="black">
+          Blog
+        </a>
+      </h1>
+      <div class="clearfix mxn2">
+        <div class="sm-col sm-col-8 md-col-9 px2">
+          <div>
+            <h2 class="h3">
+              <a href="#" class="black">
+                Blog Post Title
+              </a>
+            </h2>
+            <p>Bacon ipsum dolor sit amet chuck prosciutto landjaeger ham hock filet mignon shoulder hamburger pig venison. Ham bacon corned beef, sausage kielbasa flank tongue pig drumstick capicola swine short loin ham hock kevin.</p>
+            <a href="#">Read more</a>
+          </div>
+          <div>
+            <h2 class="h3">
+              <a href="#" class="black">
+                Blog Post Title
+              </a>
+            </h2>
+            <p>Bacon ipsum dolor sit amet chuck prosciutto landjaeger ham hock filet mignon shoulder hamburger pig venison. Ham bacon corned beef, sausage kielbasa flank tongue pig drumstick capicola swine short loin ham hock kevin.</p>
+            <a href="#">Read more</a>
+          </div>
+        </div>
+        <div class="sm-col sm-col-4 md-col-3 px2 sm-show">
+          <h3 class="h4">Categories</h3>
+          <ul class="list-reset">
+            <li><a href="#" class="">Bacon</a></li>
+            <li><a href="#" class="">Bratwurst</a></li>
+            <li><a href="#" class="">Andouille</a></li>
+            <li><a href="#" class="">Pork Loin</a></li>
+            <li><a href="#" class="">Corned Beef</a></li>
+            <li><a href="#" class="">Pastrami</a></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="container px2 py3">
+      <h1 class="mt0">
+        <a href="#" class="black">
+          Gallery
+        </a>
+      </h1>
+      <div class="clearfix mxn2">
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="sm-show md-hide clearfix"></div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="md-show lg-hide clearfix"></div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="sm-show md-hide clearfix"></div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="md-show lg-hide clearfix"></div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="sm-show md-hide clearfix"></div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+        <div class="col col-6 sm-col-4 md-col-3 lg-col-2 px2 mb3">
+          <a href="#" class="block">
+            <img src="/docs/images/placeholder.svg" class="block">
+          </a>
+        </div>
+      </div>
+    </section>
+
+
+    <footer class="white bg-black">
+      <div class="px2 py3 container">
+        <div class="clearfix mxn2">
+          <div class="col col-6 md-col-3">
+            <ul class="list-reset">
+              <li>
+                <h3 class="h4 m0">
+                  <a href="#" class="button block button-transparent">Home</a>
+                </h3>
+              </li>
+              <li><a href="#" class="h5 button block button-transparent">Bacon</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Bratwurst</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Andouille</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Pork Loin</a></li>
+            </ul>
+          </div>
+          <div class="col col-6 md-col-3">
+            <ul class="list-reset">
+              <li>
+                <h3 class="h4 m0">
+                  <a href="#" class="button block button-transparent">Categories</a>
+                </h3>
+              </li>
+              <li><a href="#" class="h5 button block button-transparent">Bacon</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Bratwurst</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Andouille</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Pork Loin</a></li>
+            </ul>
+          </div>
+          <div class="col col-6 md-col-3">
+            <ul class="list-reset">
+              <li>
+                <h3 class="h4 m0">
+                  <a href="#" class="button block button-transparent">Categories</a>
+                </h3>
+              </li>
+              <li><a href="#" class="h5 button block button-transparent">Bacon</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Bratwurst</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Andouille</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Pork Loin</a></li>
+            </ul>
+          </div>
+          <div class="col col-6 md-col-3">
+            <ul class="list-reset">
+              <li>
+                <h3 class="h4 m0">
+                  <a href="#" class="button block button-transparent">About</a>
+                </h3>
+              </li>
+              <li><a href="#" class="h5 button block button-transparent">Bacon</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Bratwurst</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Andouille</a></li>
+              <li><a href="#" class="h5 button block button-transparent">Pork Loin</a></li>
+            </ul>
+          </div>
+        </div>
+        <p class="h6 mb0">© 2014 Hamburgers, LLC</p>
+      </div>
+    </footer>
+
+    <div class="container px2 mt3">
+      <a href="/docs/guides/layout" class="button button-small button-link">
+        Back to Page Layout Guide
+      </a>
     </div>
+
+    <div class="container px2">
+      <hr class="mb0 b2 border-aqua">
+
+      <footer class="mb3">
+        <div class="">
+          <div class="flex flex-wrap flex-baseline caps mxn2">
+            <a href="/" class="h6 button button-small m2 button-link">Home</a>
+            <a href="/docs" class="h6 button button-small m2 button-link">Docs</a>
+            <a href="/docs/getting-started" class="h6 button button-small m2 button-link">Download</a>
+            <a href="//github.com/jxnblk/basscss" class="h6 button button-small m2 button-link">Github</a>
+            <div class="flex-grow"></div>
+            <div class="flex-none p2 nowrap">
+              <p class="h6 bold m0">
+                Made by <a href="//jxnblk.com" class="h6 button button-small button-link">Jxnblk</a>
+              </p>
+            </div>
+          </div>
+        </div>
+      </footer>
+    </div>
+
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
@@ -51,8 +284,8 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js scripts/main.js -->
-        <script src="scripts/main.js"></script>
-        <!-- endbuild -->
-</body>
+    <!-- build:js scripts/main.js -->
+    <script src="scripts/main.js"></script>
+    <!-- endbuild -->
+  </body>
 </html>
